<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="premium_feature_3">Feature 3</string>
    <string name="premium_feature_2">Feature 2</string>
    <string name="premium_feature_1">Feature 1</string>
    <string name="premium_one_time_price">%1$s for lifetime</string>
    <string name="premium_subscription_price_trial">%1$s days free, then %2$s per %3$s.</string>
    <string name="premium_subscription_price_no_trial">%1$s per %2$s</string>
    <string name="premium_gpc_key" />
    <string name="premium_toast_success">Purchase success</string>
    <string name="premium_something_wrong">Something went wrong</string>
    <string name="premium_prefs_name">premium_prefs</string>
    <string name="admob_app_id">ca-app-pub-2159500504641406~8326954021</string>
    <string name="interstitial_key">ca-app-pub-3940256099942544/1033173712</string>
    <string name="feature_1">Unlimited features</string>
    <string name="feature_2">Ads Free</string>
    <string name="feature_3">VIP Customer Support</string>
    <string name="premium_text">LightBox Plus</string>
    <string name="optin_activity_title">LightBox</string>
    <string name="pp_link">https://pivotmasterapps.github.io/privacy/</string>
    <string name="terms_link">https://pivotmasterapps.github.io/terms/</string>
    <string name="eule_text"> By continuing you accept our <![CDATA[ <a href="%1$s">Privacy Policy</a>]]> and <![CDATA[<a href="%2$s">Terms Of Use</a>]]>.</string>

    <string name="rating_dialog_experience">Do you like \n%1$s?</string>
    <string name="rating_dialog_experience_body">We always try to improve our app experience.\nWe will really appreciate if you can rate us</string>
    <string name="rating_dialog_maybe_later">Maybe later</string>
    <string name="rating_dialog_never">Never</string>
    <string name="rating_dialog_feedback_title">Feedback</string>
    <string name="rating_dialog_submit">Submit</string>
    <string name="rating_dialog_cancel">Cancel</string>
    <string name="rating_dialog_suggestions">Suggest us what went wrong and we\'ll work on it!</string>
    <string name="error_no_google_play">Error! Couldn\'t find Google Play on this device.</string>
    <string name="market_prefix" translatable="false">market://details?id=</string>
    <string name="rate_dialog_negative">No</string>
    <string name="rate_dialog_positive">Yes</string>
    <string name="rate_never">Never</string>
    <string name="app_name">App Name</string>
    <string name="banner_ad_unit">ca-app-pub-3940256099942544/6300978111</string>
    <string name="no_app_resolved">No app found</string>
    <string name="premium_subscription_id">revenuecat_subscription_offer</string>
    <string name="renew_text">Renews automatically, cancel anytime</string>
    <string name="premium_text_subtitle">Unlock all features</string>
    <string name="premium_text_title">GO PRO!</string>
    <string name="rate">Rate Us</string>
    <string name="rating_dialog_experience_directions">The best we can get</string>
</resources>