<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_rating"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@color/premium_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_rating_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:textColor="@color/premium_text_color"
        android:gravity="center"
        android:textStyle="bold"
        android:paddingTop="24dp"
        android:textSize="@dimen/text_size_title_1"
        tools:text="@string/rating_dialog_experience"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/dialog_rating_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:paddingTop="16dp"
        android:textColor="@color/premium_text_color"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/rating_dialog_experience_body"
        app:layout_constraintTop_toBottomOf="@id/dialog_rating_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <RatingBar
        android:id="@+id/dialog_rating_rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:numStars="5"
        android:scaleX="1"
        android:scaleY="1"
        android:stepSize="1"
        app:layout_constraintTop_toBottomOf="@id/dialog_rating_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/dialog_rating_directions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:gravity="center"
        android:paddingTop="16dp"
        android:text="@string/rating_dialog_experience_directions"
        android:textColor="@color/premium_text_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_rating_arrow"
        app:layout_constraintEnd_toStartOf="@+id/dialog_rating_arrow"
        app:layout_constraintTop_toTopOf="@+id/dialog_rating_arrow" />

    <ImageView
        android:id="@+id/dialog_rating_arrow"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:src="@drawable/arrow"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_rating_rating_bar"
        app:layout_constraintEnd_toEndOf="@id/dialog_rating_rating_bar"
        app:tint="@color/premium_text_color" />

    <Button
        android:id="@+id/dialog_rating_button_positive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="24dp"
        android:enabled="false"
        android:foreground="?selectableItemBackground"
        android:background="@drawable/custom_rate_button"
        android:text="@string/rate"
        app:layout_constraintTop_toBottomOf="@id/dialog_rating_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>