<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/premium_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/premium_cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/img_plus_dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/premium_close"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:alpha="0.8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/exit_btn"/>

    <TextView
        android:id="@+id/premium_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/premium_text_subtitle"
        android:layout_marginTop="16dp"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/premium_text_color"
        android:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/premium_cover"/>

    <TextView
        android:id="@+id/premium_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/premium_text_subtitle"
        android:layout_marginTop="4dp"
        android:textSize="20sp"
        android:textColor="@color/premium_text_color"
        android:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/premium_title"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/premium_one_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_with_goplus_btn_bg"
        android:gravity="center"
        android:layout_marginHorizontal="32dp"
        android:paddingHorizontal="32dp"
        android:paddingVertical="12dp"
        android:text="START FREE TRIAL"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/renew_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/renew_tv"
        android:text="@string/renew_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/premium_text_color"
        android:alpha="0.8"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@id/optin_eula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/optin_eula"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        app:layout_goneMarginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/eule_text"
        android:textColor="@color/premium_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/pricing_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:textColor="@color/premium_text_color"
        android:gravity="center"
        android:lines="2"
        android:foregroundGravity="center"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/premium_one_time"/>

    <ProgressBar
        android:id="@+id/premium_pb_one_time"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toTopOf="@+id/premium_one_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pricing_text" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="12dp"
        app:layout_constraintBottom_toTopOf="@+id/pricing_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/premium_subtitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/round_check_box"/>
                <View
                    android:layout_width="16dp"
                    android:layout_height="0dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:alpha="0.8"
                    android:text="@string/feature_1"
                    android:textColor="@color/premium_text_color"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/round_check_box"/>
                <View
                    android:layout_width="16dp"
                    android:layout_height="0dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:alpha="0.8"
                    android:text="@string/feature_2"
                    android:textColor="@color/premium_text_color"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/round_check_box"/>
                <View
                    android:layout_width="16dp"
                    android:layout_height="0dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:alpha="0.8"
                    android:text="@string/feature_3"
                    android:textColor="@color/premium_text_color"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

<!--    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/premium_subscription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text=""
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@id/premium_one_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/ripple_with_goplus_btn_bg"
        android:layout_marginBottom="16dp"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>